--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,55 @@
-css
+#myList {
+  /* Remove default list styling */
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+#myList li a {
+  border: 1px solid #ddd; /* Add a border to all links */
+  margin-top: -1px; /* Prevent double borders */
+  background-color: #f6f6f6; /* Grey background color */
+  padding: 12px; /* Add some padding */
+  text-decoration: none; /* Remove default text underline */
+  font-size: 18px; /* Increase the font-size */
+  color: black; /* Add a black text color */
+  display: block; /* Make it into a block element to fill the whole list */
+}
+
+#myUL li a:hover:not(.header) {
+  background-color: #eee; /* Add a hover effect to all links, except for headers */
+}
+
+.imgcenter{
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+#Search   {
+    display:block;  
+    margin-left:auto;
+    margin-right:auto;   
+    border: 2px solid green;
+    border-radius: 4px;
+  }
+
+#myFilterBox {
+    display:block;  
+    margin-left:auto;
+    margin-right:auto;   
+}
+
+#myNewName  {
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    border: 2px solid green;
+    border-radius: 4px;
+    
+}
+
+footer  {
+  text-align: center;
+  
+}
